Update mac-developer-guide.md